# jenkins-build-test

./: Dockerfile  Dockerfile.local  Jenkinsfile  README.md  docker-compose.stag.yml  docker-compose.yml  envvar  envvar.txt  envvars  i18n.js  jest.config.mjs  jest.json  next.config.js  package.json  pyproject.toml  tekton.txt  user-actions.http
.build/: Jenkinsfile
Jenkins/: Jenkinsenv  Jenkinsfile  deploy.yaml
cdxp_api/: __main__.py  app.py  cli.py
cdxp_api/_shared/: exception_handlers.py  models.py  secrets_utils.py  settings.py  utils.py
cdxp_api/audiences/: models.py  repository.py  routes.py  rules.py  service.py
cdxp_api/auth/: config.py  deps.py  exception_handlers.py  models.py  routes.py  settings.py
cdxp_api/campaigns/: fsm.py  legacy_models.py  models.py  repositories.py  routes.py  services.py  settings.py
cdxp_api/database/: config.py  deps.py  exception_handlers.py  schemas.py  settings.py  sqltypes.py
cdxp_api/databricks/: config.py  settings.py
cdxp_api/emarsys/: event_factory.py  models.py  routes.py  service.py  service_legacy.py  settings.py  tasks.py  utils.py
cdxp_api/notifications/: README.md  models.py  repository.py
cdxp_api/products/: models.py  product_tree_data.py  routes.py  rules.py
cdxp_api/scheduler/: models.py  routes.py  scheduler.py  settings.py
cdxp_api/users/: models.py  repository.py
cdxp_api/versions/: models.py  routes.py
conf/: .development.env  .gitignore  .production.env  .staging.env
conf/encrypted/: .development.enc.env
conf/secrets/: secrets.enc.env
config/development/: secrets-elsie-backend.enc.env
deploy/production/: deployment.yaml  ingress.yaml
deploy/staging/: deployment.yaml  ingress.yaml  service.yaml
elsie-analytics/: .sops.yaml  README.md  docker-compose.prod.yml  jest.json  package.json
elsie-analytics/Jenkins/: Jenkinsenv  Jenkinsfile  (+1 more)
envvars/: envtest.groovy
sa-dashboard-graphql/: README.md  package.json  serverless.yml  tsconfig.json  webpack.config.js
src/: app.module.ts  main.ts
tests/: .gitignore  test_decorators.py  test_health.py
update-staff-ids-mapping/: .gitignore  README.md  jest.config.js  openapi.yml  package.json  serverless.yml  tsconfig.json  webpack.config.js
upload-clienteling-list/: .env.sample  .gitignore  README.md  openapi.yml  package.json  serverless.yml  tsconfig.json  webpack.config.js
(+346 files in other folders)
