[tool.poetry]
name = "lcjg-reminder-service"
version = "0.1.0"
description = ""
authors = ["Matthew Lam <matthewlam@lcjgroup.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
python-dotenv = "^0.19.2"
dask = "^2022.2.0"
pandas = "^1.4.1"
pyarrow = "^7.0.0"
adlfs = "^2022.2.0"
azure-storage-blob = "^12.9.0"
schedule = "^1.1.0"
APScheduler = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
